--- a/react-swr-app/package.json
+++ b/react-swr-app/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "swr": "^1.3.0",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workerize-loader": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
